// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
     GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en <GifExpertApp /> debe mostrar una lista de categorías 1`] = `
<Fragment>
  <h2>
     GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Seinfeld"
      key="Seinfeld"
    />
    <GifGrid
      category="Sopranos"
      key="Sopranos"
    />
  </ol>
</Fragment>
`;
